--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "daisyui": "^2.15.2",
     "emailjs": "^4.0.0",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^6.4.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.3",
